# urbackup_backend

./: .gitignore  CMakeLists.txt  build_client.bat  build_client.sh  build_server.bat  build_server.sh  config.h  configure.client  create_linux_installer.sh  create_osx_installer.sh  update_deps.bat  update_restore.sh
SQLGen/: CMakeLists.txt
clientctl/: CMakeLists.txt
common/: CMakeLists.txt
cryptoplugin/: CMakeLists.txt  cryptopp_inc.h
fileservplugin/: CMakeLists.txt  main.cpp  settings.h
fsimageplugin/: CMakeLists.txt  dllmain.cpp
fuseplugin/: CMakeLists.txt
httpserver/: CMakeLists.txt
libfastcgi/: CMakeLists.txt
piped_process/: CMakeLists.txt  getpid.cpp  piped_process.cpp  piped_process_lin.cpp
snapshot_helper/: CMakeLists.txt
sqlite/: CMakeLists.txt
urbackupclient/: CMakeLists.txt  cmdline_preprocessor.cpp  dllmain.cpp
urbackupcommon/: .os_functions_win.cpp.swp  CMakeLists.txt
urbackupcommon/fileclient/: tcpstack.cpp
urbackupserver/: CMakeLists.txt  cmdline_preprocessor.cpp
urbackupserver/serverinterface/: create_zip.cpp
urlplugin/: CMakeLists.txt
