cmake_minimum_required(VERSION 2.8.11)

project(urbackup_common)

if(WIN32)
    add_library(os_functions os_functions_win.cpp)
    add_library(os_functions_no_server os_functions_win.cpp)
else()
    add_library(os_functions os_functions_lin.cpp)
    add_library(os_functions_no_server os_functions_lin.cpp)
endif()
set_target_properties(os_functions_no_server PROPERTIES COMPILE_FLAGS -DOS_FUNC_NO_SERVER)

add_library(compressed_pipe CompressedPipe.cpp)
add_library(compressed_pipe2 CompressedPipe2.cpp)
add_library(extent_iterator ExtentIterator.cpp)
add_library(internet_service_pipe InternetServicePipe.cpp)
add_library(internet_service_pipe2 InternetServicePipe2.cpp)
add_library(sparse_file SparseFile.cpp)
add_library(tree_hash TreeHash.cpp)
add_library(bufmgr bufmgr.cpp)
add_library(chunk_hasher chunk_hasher.cpp)
add_library(escape escape.cpp)
add_library(file_metadata file_metadata.cpp)
add_library(filelist_utils filelist_utils.cpp)
add_library(glob glob.cpp)
add_library(json json.cpp)
add_library(settingslist settingslist.cpp)
add_library(file_client fileclient/FileClient.cpp)
add_library(file_client_chunked fileclient/FileClientChunked.cpp)
add_library(file_tcpstack fileclient/tcpstack.cpp)
add_library(sha2 sha2/sha2.c)

